tests/regression/errors/basic/import_error_2.csd
// Import error test 2
yeet "nonexistent_module_2"
sus result drip = some_function(2)
